<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground"
    tools:context=".view.DetailsBeerView">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <ImageView
                android:id="@+id/detailBeerImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <ImageView
                android:src="@drawable/scrim_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBarDetail"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-7dp"
                android:indeterminate="true" />

            <TextView
                android:id="@+id/beerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/beerName"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/miniDescript"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingTop="15dp"
                    android:paddingRight="14dp"
                    android:paddingBottom="15dp"
                    android:text="@string/dot_loading"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textCategory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingTop="14dp"
                            android:paddingRight="14dp"
                            android:text="@string/updateDate"
                            android:textColor="@color/colorPrimaryDark"/>

                        <TextView
                            android:id="@+id/updateDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingTop="5dp"
                            android:paddingRight="14dp"
                            android:paddingBottom="14dp"
                            android:text="@string/dot_loading"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/Country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingTop="14dp"
                            android:paddingRight="14dp"
                            android:text="@string/abv"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:id="@+id/abv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingTop="5dp"
                            android:paddingRight="14dp"
                            android:paddingBottom="14dp"
                            android:text="@string/dot_loading"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:text="@string/description"
                        android:textColor="@color/colorPrimaryDark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="14dp"
                                android:paddingRight="14dp"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:drawableEnd="@drawable/ic_info"
                android:drawableRight="@drawable/ic_info"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/status"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#D0FFDB"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/infoStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawableStart="@drawable/ic_check"
                        android:drawableLeft="@drawable/ic_check"
                        android:drawablePadding="10dp"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:padding="14dp"
                        android:text="@string/statusVerified"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>